avoided potential margin collapse

--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,7 @@
 }
 
 .page__body {
-  font-family: Avenir, "Helvetica Neue", Arial, sans-serif;
+  font-family: Avenir, 'Helvetica Neue', Arial, sans-serif;
   font-size: 16px;
 }
 
@@ -26,7 +26,9 @@
   display: flex;
   justify-content: center;
   gap: 20px;
-  padding-top: 20px;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .search-bar-big {
